[movies] migration: Migrate to gradle kotlin dsl - refactor quotes
The first step before migrating to Gradle Kotlin DSL is to replace all
Groovy single quotes (') to double quotes (").

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
-    apply from: 'config/gradle/dependencies/repositories.gradle'
-    apply from: 'config/gradle/dependencies/versioning.gradle'
-    apply from: 'config/gradle/dependencies/dependencies.gradle'
-    apply from: 'config/gradle/keys/keys.gradle'
+    apply from: "config/gradle/dependencies/repositories.gradle"
+    apply from: "config/gradle/dependencies/versioning.gradle"
+    apply from: "config/gradle/dependencies/dependencies.gradle"
+    apply from: "config/gradle/keys/keys.gradle"
 
     repositories {
         google()
