--- a/config/gradle/keys/keys.gradle
+++ b/config/gradle/keys/keys.gradle
@@ -1,5 +1,5 @@
 ext.keys = [
 
-        themoviedb_api_properties_file_path: '../config/keys/themoviedb_api.properties',
+        themoviedb_api_properties_file_path: "../config/keys/themoviedb_api.properties",
 
 ]
