--- a/config/gradle/lang/kotlin.gradle
+++ b/config/gradle/lang/kotlin.gradle
@@ -1,12 +1,12 @@
-apply from: '../config/gradle/lang/kapt.gradle'
-apply from: '../config/gradle/lang/java.gradle'
+apply from: "../config/gradle/lang/kapt.gradle"
+apply from: "../config/gradle/lang/java.gradle"
 
 sourceCompatibility = java.version
 targetCompatibility = java.version
 
 test {
     testLogging { // Print test details in the terminal (or CI).
-        events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
-        exceptionFormat 'full'
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+        exceptionFormat "full"
     }
 }
