--- a/config/gradle/dependencies/dependency_updates.gradle
+++ b/config/gradle/dependencies/dependency_updates.gradle
@@ -1,11 +1,11 @@
 dependencyUpdates.resolutionStrategy = {
         componentSelection { rules ->
                 rules.all { ComponentSelection selection ->
-                        boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
+                        boolean rejected = ["alpha", "beta", "rc", "cr", "m"].any { qualifier ->
                                 selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
                         }
                         if (rejected) {
-                                selection.reject('Release candidate')
+                                selection.reject("Release candidate")
                         }
                 }
         }
