--- a/config/gradle/dependencies/versioning.gradle
+++ b/config/gradle/dependencies/versioning.gradle
@@ -1,36 +1,36 @@
 ext.versions = [
 
         // Plugins
-        android_plugin       : '3.4.0-alpha07',
-        kotlin_plugin        : '1.3.10',
-        versions_plugin      : '0.20.0',
-        dexcount_plugin      : '0.8.4',
-        detekt_plugin        : '1.0.0-RC11',
+        android_plugin       : "3.4.0-alpha07",
+        kotlin_plugin        : "1.3.10",
+        versions_plugin      : "0.20.0",
+        dexcount_plugin      : "0.8.4",
+        detekt_plugin        : "1.0.0-RC11",
 
         // LeakCanary
-        'leakcanary'         : '1.6.2',
+        "leakcanary"         : "1.6.2",
 
         // IMPLEMENTATION // ************************************************************************************************
 
         // Android
-        app_compat           : '1.0.2',
-        recycler_view        : '1.0.0',
-        card_view            : '1.0.0',
-        material             : '1.0.0',
-        constraint_layout    : '1.1.3',
+        app_compat           : "1.0.2",
+        recycler_view        : "1.0.0",
+        card_view            : "1.0.0",
+        material             : "1.0.0",
+        constraint_layout    : "1.1.3",
 
         // Android KTX
-        ktx_core             : '1.0.1',
+        ktx_core             : "1.0.1",
 
         // Android Architecture Components
-        lifecycle_extensions : '2.0.0',
+        lifecycle_extensions : "2.0.0",
 
         // Dependency Injection
         dagger               : "2.19",
 
         // Rx
-        rxjava               : '2.2.4',
-        rxandroid            : '2.1.0',
+        rxjava               : "2.2.4",
+        rxandroid            : "2.1.0",
 
         // Network
         gson                 : "2.8.5",
@@ -40,37 +40,37 @@ ext.versions = [
         retrofit             : "2.5.0",
 
         // Image
-        glide                : '4.8.0',
+        glide                : "4.8.0",
 
         // Dart
-        'dart'               : '2.0.3',
+        "dart"               : "2.0.3",
 
         // Logging
-        month_and_year_picker: '1.3.0',
+        month_and_year_picker: "1.3.0",
 
         // Logging
-        timber               : '4.7.1',
+        timber               : "4.7.1",
 
         // TEST IMPLEMENTATION // *******************************************************************************************
 
         // Test
-        junit                : '4.12',
-        assertj              : '3.11.1',
+        junit                : "4.12",
+        assertj              : "3.11.1",
 
         // Architecture Components
-        core_testing         : '2.0.0',
+        core_testing         : "2.0.0",
 
         // Mock
-        mockito_kotlin       : '1.6.0',
+        mockito_kotlin       : "1.6.0",
 
         // Robolectric
-        robolectric          : '4.0.2',
+        robolectric          : "4.0.2",
 
         // ANDROID TEST IMPLEMENTATION // ***********************************************************************************
 
         // Android Test
-        test_core            : '1.0.0',
-        test_junit           : '1.0.0',
-        test_espresso        : '3.1.0',
+        test_core            : "1.0.0",
+        test_junit           : "1.0.0",
+        test_espresso        : "3.1.0",
 
 ]
