--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,16 +1,16 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'com.github.ben-manes.versions'
-apply plugin: 'com.getkeepsafe.dexcount'
-apply plugin: 'io.gitlab.arturbosch.detekt'
+apply plugin: "com.android.library"
+apply plugin: "kotlin-android"
+apply plugin: "kotlin-android-extensions"
+apply plugin: "kotlin-kapt"
+apply plugin: "com.github.ben-manes.versions"
+apply plugin: "com.getkeepsafe.dexcount"
+apply plugin: "io.gitlab.arturbosch.detekt"
 
-apply from: '../config/gradle/android/android.gradle'
-apply from: '../config/gradle/android/dexcount.gradle'
-apply from: '../config/gradle/quality/lint.gradle'
-apply from: '../config/gradle/quality/detekt.gradle'
-apply from: '../config/gradle/dependencies/dependency_updates.gradle'
+apply from: "../config/gradle/android/android.gradle"
+apply from: "../config/gradle/android/dexcount.gradle"
+apply from: "../config/gradle/quality/lint.gradle"
+apply from: "../config/gradle/quality/detekt.gradle"
+apply from: "../config/gradle/dependencies/dependency_updates.gradle"
 
 dependencies {
     implementation deps.module.domain
