--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,18 +1,18 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'com.github.ben-manes.versions'
-apply plugin: 'com.getkeepsafe.dexcount'
-apply plugin: 'io.gitlab.arturbosch.detekt'
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
+apply plugin: "kotlin-android-extensions"
+apply plugin: "kotlin-kapt"
+apply plugin: "com.github.ben-manes.versions"
+apply plugin: "com.getkeepsafe.dexcount"
+apply plugin: "io.gitlab.arturbosch.detekt"
 
-apply from: '../config/gradle/android/android.gradle'
-apply from: '../config/gradle/android/dart.gradle'
-apply from: '../config/gradle/android/dexcount.gradle'
-apply from: '../config/gradle/android/leakcanary.gradle'
-apply from: '../config/gradle/quality/lint.gradle'
-apply from: '../config/gradle/quality/detekt.gradle'
-apply from: '../config/gradle/dependencies/dependency_updates.gradle'
+apply from: "../config/gradle/android/android.gradle"
+apply from: "../config/gradle/android/dart.gradle"
+apply from: "../config/gradle/android/dexcount.gradle"
+apply from: "../config/gradle/android/leakcanary.gradle"
+apply from: "../config/gradle/quality/lint.gradle"
+apply from: "../config/gradle/quality/detekt.gradle"
+apply from: "../config/gradle/dependencies/dependency_updates.gradle"
 
 android {
     defaultConfig {
@@ -29,7 +29,7 @@ android {
         }
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
 }
