--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -8,19 +8,19 @@ apply from: "../config/gradle/quality/detekt.gradle"
 apply from: "../config/gradle/dependencies/dependency_updates.gradle"
 
 dependencies {
-    implementation deps.kotlin.jre
-    implementation deps.di.dagger
-    kapt deps.di.daggerCompiler
-    implementation deps.rx.rxjava
+    implementation(deps.kotlin.jre)
+    implementation(deps.di.dagger)
+    kapt(deps.di.daggerCompiler)
+    implementation(deps.rx.rxjava)
 
-    testImplementation deps.module.test
+    testImplementation(deps.module.test)
 
-    testImplementation deps.test.junit
-    testImplementation deps.test.assertj
+    testImplementation(deps.test.junit)
+    testImplementation(deps.test.assertj)
     testImplementation(deps.mock.mockitoKotlin, {
         exclude group: excludedDeps.group.jetbrainsKotlin,
                 module: excludedDeps.module.kotlinReflect
     })
 
-    detektPlugins deps.plugin.detektFormatting
+    detektPlugins(deps.plugin.detektFormatting)
 }
