--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url reps.url.gradle }
+        maven { url = reps.url.gradle }
     }
     dependencies {
-        classpath deps.plugin.android
-        classpath deps.plugin.kotlin
-        classpath deps.plugin.versions
-        classpath deps.plugin.dexcount
-        classpath deps.plugin.detekt
+        classpath(deps.plugin.android)
+        classpath(deps.plugin.kotlin)
+        classpath(deps.plugin.versions)
+        classpath(deps.plugin.dexcount)
+        classpath(deps.plugin.detekt)
     }
 }
 
@@ -22,6 +22,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url reps.url.gradle }
+        maven { url = reps.url.gradle }
     }
 }
