--- a/data/build.gradle
+++ b/data/build.gradle
@@ -13,31 +13,31 @@ apply from: "../config/gradle/quality/detekt.gradle"
 apply from: "../config/gradle/dependencies/dependency_updates.gradle"
 
 dependencies {
-    implementation deps.module.domain
+    implementation(deps.module.domain)
 
-    implementation deps.kotlin.jre
-    implementation deps.android.appCompat
-    implementation deps.di.dagger
-    implementation deps.di.daggerAndroid
-    kapt deps.di.daggerCompiler
-    kapt deps.di.daggerAndroidProcessor
-    implementation deps.rx.rxjava
-    implementation deps.rx.rxandroid
-    implementation deps.network.okhttpLogging
-    implementation deps.network.gson
-    implementation deps.rest.retrofit
-    implementation deps.rest.retrofitGson
-    implementation deps.rest.retrofitRx
-    implementation deps.logging.timber
+    implementation(deps.kotlin.jre)
+    implementation(deps.android.appCompat)
+    implementation(deps.di.dagger)
+    implementation(deps.di.daggerAndroid)
+    kapt(deps.di.daggerCompiler)
+    kapt(deps.di.daggerAndroidProcessor)
+    implementation(deps.rx.rxjava)
+    implementation(deps.rx.rxandroid)
+    implementation(deps.network.okhttpLogging)
+    implementation(deps.network.gson)
+    implementation(deps.rest.retrofit)
+    implementation(deps.rest.retrofitGson)
+    implementation(deps.rest.retrofitRx)
+    implementation(deps.logging.timber)
 
-    testImplementation deps.module.test
+    testImplementation(deps.module.test)
 
-    testImplementation deps.test.junit
-    testImplementation deps.test.assertj
+    testImplementation(deps.test.junit)
+    testImplementation(deps.test.assertj)
     testImplementation(deps.mock.mockitoKotlin, {
         exclude group: excludedDeps.group.jetbrainsKotlin,
                 module: excludedDeps.module.kotlinReflect
     })
 
-    detektPlugins deps.plugin.detektFormatting
+    detektPlugins(deps.plugin.detektFormatting)
 }
