--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,7 +1,9 @@
-apply plugin: "kotlin"
-apply plugin: "kotlin-kapt"
-apply plugin: "com.github.ben-manes.versions"
-apply plugin: "io.gitlab.arturbosch.detekt"
+plugins {
+    id("kotlin")
+    id("kotlin-kapt")
+    id("com.github.ben-manes.versions")
+    id("io.gitlab.arturbosch.detekt")
+}
 
 apply from: "../config/gradle/lang/kotlin.gradle"
 apply from: "../config/gradle/quality/detekt.gradle"
