[movies] migration: Migrate to gradle kotlin dsl - convert dependencies
This commits removes the dependencies and versioning files and replaces
these two Groovy files with four new Kotlin files (Versions, Deps,
ExcludedDeps and Config).

Also, a new buildScr kotlin Gradle DSL module was created. This module
will contain all the Kotlin Gradle DSL related files and configuration.

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
     apply from: "config/gradle/dependencies/repositories.gradle"
-    apply from: "config/gradle/dependencies/versioning.gradle"
-    apply from: "config/gradle/dependencies/dependencies.gradle"
+    apply from: "config/gradle/dependencies/modules.gradle"
     apply from: "config/gradle/keys/keys.gradle"
 
     repositories {
@@ -10,11 +9,11 @@ buildscript {
         maven { url = reps.url.gradle }
     }
     dependencies {
-        classpath(deps.plugin.android)
-        classpath(deps.plugin.kotlin)
-        classpath(deps.plugin.versions)
-        classpath(deps.plugin.dexcount)
-        classpath(deps.plugin.detekt)
+        classpath(Deps.pluginAndroid)
+        classpath(Deps.pluginKotlin)
+        classpath(Deps.pluginVersions)
+        classpath(Deps.pluginDexcount)
+        classpath(Deps.pluginDetekt)
     }
 }
 
