--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -21,7 +21,7 @@ android {
         applicationId = group
         versionCode = app.major * 10000 + app.minor * 1000 + app.patch * 100 + app.build
         versionName = "${app.major}.${app.minor}.${app.patch}"
-        testInstrumentationRunner = deps.androidTest.config
+        testInstrumentationRunner = Config.testInstrumentationRunner
     }
     buildTypes {
         debug {
@@ -40,50 +40,50 @@ dependencies {
     implementation(deps.module.domain)
     implementation(deps.module.data)
 
-    debugImplementation(deps.leakcanary.debug)
-    releaseImplementation(deps.leakcanary.release)
+    debugImplementation(Deps.leakCanaryDebug)
+    releaseImplementation(Deps.leakCanaryRelease)
 
-    implementation(deps.kotlin.jre)
-    implementation(deps.android.appCompat)
-    implementation(deps.android.recyclerView)
-    implementation(deps.android.cardView)
-    implementation(deps.android.material)
-    implementation(deps.android.constraintLayout)
-    implementation(deps.androidKtx.core)
-    implementation(deps.androidArch.lifecycleExtensions)
-    implementation(deps.di.dagger)
-    implementation(deps.di.daggerAndroid)
-    kapt(deps.di.daggerCompiler)
-    kapt(deps.di.daggerAndroidProcessor)
-    implementation(deps.rx.rxjava)
-    implementation(deps.rx.rxandroid)
-    implementation(deps.network.gson)
-    implementation(deps.network.okhttpLogging)
-    implementation(deps.rest.retrofit)
-    implementation(deps.ui.glide)
-    kapt(deps.ui.glideCompiler)
-    implementation(deps.extras.dart)
-    kapt(deps.extras.dartProcessor)
-    implementation(deps.extras.henson)
-    kapt(deps.extras.hensonProcessor)
-    implementation(deps.util.monthAndYearPicker)
-    implementation(deps.logging.timber)
+    implementation(Deps.kotlin)
+    implementation(Deps.material)
+    implementation(Deps.androidAppCompat)
+    implementation(Deps.androidRecyclerView)
+    implementation(Deps.androidCardView)
+    implementation(Deps.androidConstraintLayout)
+    implementation(Deps.androidKtxCore)
+    implementation(Deps.androidArchLifecycleExtensions)
+    implementation(Deps.diDagger)
+    kapt(Deps.diDaggerCompiler)
+    implementation(Deps.diDaggerAndroid)
+    kapt(Deps.diDaggerAndroidProcessor)
+    implementation(Deps.rxJava)
+    implementation(Deps.rxAndroid)
+    implementation(Deps.netGson)
+    implementation(Deps.netOkHttpLogging)
+    implementation(Deps.restRetrofit)
+    implementation(Deps.imageGlide)
+    kapt(Deps.imageGlideCompiler)
+    implementation(Deps.extrasDart)
+    kapt(Deps.extrasartProcessor)
+    implementation(Deps.extrasHenson)
+    kapt(Deps.extrasHensonProcessor)
+    implementation(Deps.utilMonthYearPicker)
+    implementation(Deps.logTimber)
 
     testImplementation(deps.module.test)
 
-    testImplementation(deps.test.junit)
-    testImplementation(deps.test.assertj)
-    testImplementation(deps.mock.mockitoKotlin, {
-        exclude group: excludedDeps.group.jetbrainsKotlin,
-                module: excludedDeps.module.kotlinReflect
+    testImplementation(Deps.testJUnit)
+    testImplementation(Deps.testAssertJ)
+    testImplementation(Deps.mockMockitoKotlin, {
+        exclude group: ExcludedDeps.groupJetbrainsKotlin,
+                module: ExcludedDeps.moduleKotlinReflect
     })
-    testImplementation(deps.androidArchTest.coreTesting)
-    testImplementation(deps.androidTest.core)
-    testImplementation(deps.robolectric.robolectric)
+    testImplementation(Deps.androidArchTestCoreTesting)
+    testImplementation(Deps.androidTestCore)
+    testImplementation(Deps.robolectric)
 
-    androidTestImplementation(deps.androidTest.core)
-    androidTestImplementation(deps.androidTest.runner)
-    androidTestImplementation(deps.androidTest.espresso)
+    androidTestImplementation(Deps.androidTestCore)
+    androidTestImplementation(Deps.androidTestRunner)
+    androidTestImplementation(Deps.androidTestEspresso)
 
-    detektPlugins(deps.plugin.detektFormatting)
+    detektPlugins(Deps.pluginDetektFormatting)
 }
