--- a/config/gradle/lang/kotlin.gradle
+++ b/config/gradle/lang/kotlin.gradle
@@ -1,12 +1,11 @@
 apply from: "../config/gradle/lang/kapt.gradle"
-apply from: "../config/gradle/lang/java.gradle"
 
-sourceCompatibility = java.version
-targetCompatibility = java.version
+sourceCompatibility = Java.version
+targetCompatibility = Java.version
 
 test {
     testLogging { // Print test details in the terminal (or CI).
-        events("passed", "skipped", "failed", "standardOut", "standardError")
-        exceptionFormat = "full"
+        events(Logs.listOfTestLoggingEvents)
+        exceptionFormat = Logs.TEST_LOGGING_EXCEPTION_FORMAT
     }
 }
